[gd_scene load_steps=9 format=3 uid="uid://ckin6oiruwreh"]

[ext_resource type="Script" path="res://10_BOARD/Symbols/Legend/Legend_behaviour.gd" id="1_ljkqs"]
[ext_resource type="Script" path="res://10_BOARD/Symbols/Legend/Page_assign.gd" id="1_x88k2"]
[ext_resource type="Material" uid="uid://7dc0f1et6s32" path="res://10_BOARD/Symbols/Legend/Symbols_legend_page_mat.tres" id="2_53db7"]
[ext_resource type="Script" path="res://10_BOARD/Symbols/Show_this_page.gd" id="4_ip0gk"]

[sub_resource type="PlaneMesh" id="PlaneMesh_yifst"]
size = Vector2(0.08, 0.1)

[sub_resource type="ViewportTexture" id="ViewportTexture_ink2k"]
viewport_path = NodePath("Text_render")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mf2vu"]
light_mode = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_53r4s"]
size = Vector3(0.960846, 0.188416, 0.321474)

[node name="legend_prefab" type="Node3D"]
script = ExtResource("1_x88k2")

[node name="legend_behaviour" type="Node" parent="."]
script = ExtResource("1_ljkqs")

[node name="Render_page" type="MeshInstance3D" parent="."]
transform = Transform3D(0.853918, 0, 0, 0, 1, 0, 0, 0, 0.207635, 0, 0, 0)
visible = false
layers = 2
mesh = SubResource("PlaneMesh_yifst")
surface_material_override/0 = ExtResource("2_53db7")

[node name="Render_text" type="Sprite3D" parent="."]
transform = Transform3D(0.0165207, 0, 0, 0, -7.22143e-10, 0.0165207, 0, -0.0165207, -7.22143e-10, 0.000475392, 0.0021256, 0.000538714)
layers = 2
texture = SubResource("ViewportTexture_ink2k")

[node name="Text_render" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(600, 400)

[node name="text_for_size" type="Label" parent="Text_render"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -41.5
offset_right = 198.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.360784, 0.341176, 0.294118, 1)
theme_override_font_sizes/font_size = 80
text = "My Legend "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Text_render/text_for_size"]
material = SubResource("CanvasItemMaterial_mf2vu")
layout_direction = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.77
offset_bottom = 56.2299
grow_horizontal = 2
grow_vertical = 2
color = Color(0.819608, 0.764706, 0.698039, 1)

[node name="text" type="Label" parent="Text_render"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -48.775
offset_right = 198.0
offset_bottom = 34.225
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.360784, 0.341176, 0.294118, 1)
theme_override_font_sizes/font_size = 60
text = "My Legend "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next_Zone" type="Area3D" parent="."]

[node name="Show_this_page" type="Node" parent="Next_Zone"]
script = ExtResource("4_ip0gk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Next_Zone"]
transform = Transform3D(0.0839063, 0, 0, 0, 0.0839063, 0, 0, 0, 0.0839063, 0.00224182, 0.00665511, -0.00113734)
shape = SubResource("BoxShape3D_53r4s")

[connection signal="update_legend" from="." to="legend_behaviour" method="_on_legend_prefab_update_legend"]
[connection signal="update_index" from="legend_behaviour" to="." method="_on_legend_behaviour_update_index"]
[connection signal="show_this_page" from="Next_Zone/Show_this_page" to="." method="_on_show_this_page_show_this_page"]
